fixed uneven height of project cards

--- a/src/scss/careers.scss
+++ b/src/scss/careers.scss
@@ -139,7 +139,6 @@ section .contents h6{
 }
 .breadcrumb-item {
   font-size: 1.1rem !important;
-  color: $sec-nav-active-bg-color !important;
   .careers-breadcrumb-link {
     color: $primary-nav-links-color;
   }
